Codigo/Código integrado con Sintactico/Triangle/V_V/Contextual/Tests/procErrParamsRepet 01.tri
! En una misma abstracción (función, procedimiento), cada parámetro debe aparecer una sola vez en la secuencia

let
  var pru : Integer;
  proc P (var x : Integer, y : Integer, x : Char ) ~ ! Error: no debe repetirse un nombre en una misma secuencia de parámetros formales 
    putint (x * 2) ! Implementación en Pascal sí permite la repetición y falla el tipo, porque usa la segunda ocurrencia de x
    ! La implementación en Java sí detecta el parámetro repetido y da un error
in
  P (var pru, pru, 'a') ! Esta no es la fuente del error


! Consola de la implementación en Java:
! ********** Triangle Compiler (IDE-Triangle 1.0) **********
! Syntactic Analysis ...
! Contextual Analysis ...
! ERROR: duplicated formal parameter "x" 5..5
! ERROR: wrong argument type for "*" 6..6
! Compilation was unsuccessful.

